--- a/web/templates/admin/admin_user/index.html.eex
+++ b/web/templates/admin/admin_user/index.html.eex
@@ -15,16 +15,16 @@
     <tr>
       <td><%= admin_user.email %></td>
       <td><%= admin_user.name %></td>
-      <td><%= admin_user.status %></td>
+      <td><%= Status.get(admin_user.status).text %></td>
 
       <td class="text-right">
-        <%= link "Show", to: admin_admin_user_path(@conn, :show, admin_user), class: "btn btn-default btn-xs" %>
-        <%= link "Edit", to: admin_admin_user_path(@conn, :edit, admin_user), class: "btn btn-default btn-xs" %>
-        <%= link "Delete", to: admin_admin_user_path(@conn, :delete, admin_user), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
+        <%= link "Show", to: admin_admin_user_path(@conn, :show, @conn.assigns.locale, admin_user), class: "btn btn-default btn-xs" %>
+        <%= link "Edit", to: admin_admin_user_path(@conn, :edit, @conn.assigns.locale, admin_user), class: "btn btn-default btn-xs" %>
+        <%= link "Delete", to: admin_admin_user_path(@conn, :delete, @conn.assigns.locale, admin_user), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
-<%= link "New admin user", to: admin_admin_user_path(@conn, :new) %>
+<%= link "New admin user", to: admin_admin_user_path(@conn, :new, @conn.assigns.locale) %>
