--- a/web/templates/admin/category/index.html.eex
+++ b/web/templates/admin/category/index.html.eex
@@ -18,13 +18,13 @@
       <td><%= Status.get(category.status).text %></td>
 
       <td class="text-right">
-        <%= link "Show", to: admin_category_path(@conn, :show, category), class: "btn btn-default btn-xs" %>
-        <%= link "Edit", to: admin_category_path(@conn, :edit, category), class: "btn btn-default btn-xs" %>
-        <%= link "Delete", to: admin_category_path(@conn, :delete, category), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
+        <%= link "Show", to: admin_category_path(@conn, :show, @conn.assigns.locale, category), class: "btn btn-default btn-xs" %>
+        <%= link "Edit", to: admin_category_path(@conn, :edit, @conn.assigns.locale, category), class: "btn btn-default btn-xs" %>
+        <%= link "Delete", to: admin_category_path(@conn, :delete, @conn.assigns.locale, category), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
-<%= link "New category", to: admin_category_path(@conn, :new) %>
+<%= link "New category", to: admin_category_path(@conn, :new, @conn.assigns.locale) %>
