--- a/web/templates/admin/category/edit.html.eex
+++ b/web/templates/admin/category/edit.html.eex
@@ -1,6 +1,6 @@
 <h2>Edit category</h2>
 
 <%= render "form.html", changeset: @changeset,
-                        action: admin_category_path(@conn, :update, @category) %>
+                        action: admin_category_path(@conn, :update, @conn.assigns.locale, @category) %>
 
-<%= link "Back", to: admin_category_path(@conn, :index) %>
+<%= link "Back", to: admin_category_path(@conn, :index, @conn.assigns.locale) %>
