--- a/web/templates/admin/category/show.html.eex
+++ b/web/templates/admin/category/show.html.eex
@@ -26,5 +26,5 @@
 
 </ul>
 
-<%= link "Edit", to: admin_category_path(@conn, :edit, @category) %>
-<%= link "Back", to: admin_category_path(@conn, :index) %>
+<%= link "Edit", to: admin_category_path(@conn, :edit, @conn.assigns.locale, @category) %>
+<%= link "Back", to: admin_category_path(@conn, :index, @conn.assigns.locale) %>
