--- a/web/templates/admin/page/index.html.eex
+++ b/web/templates/admin/page/index.html.eex
@@ -7,10 +7,10 @@
     <h4>List</h4>
     <ul>
       <li>
-        <%= link "AdminUser", to: admin_admin_user_path(@conn, :index) %>
+        <%= link "AdminUser", to: admin_admin_user_path(@conn, :index, @conn.assigns.locale) %>
       </li>
       <li>
-        <%= link "Category", to: admin_category_path(@conn, :index) %>
+        <%= link "Category", to: admin_category_path(@conn, :index, @conn.assigns.locale) %>
       </li>
     </ul>
   </div>
