--- a/web/templates/user/new.html.eex
+++ b/web/templates/user/new.html.eex
@@ -1,6 +1,6 @@
 <h2>New user</h2>
 
 <%= render "form.html", changeset: @changeset,
-                        action: user_path(@conn, :create) %>
+                        action: user_path(@conn, :create, @conn.assigns.locale) %>
 
-<%= link "Back", to: user_path(@conn, :index) %>
+<%= link "Back", to: user_path(@conn, :index, @conn.assigns.locale) %>
