#23 add user auth

--- a/web/templates/admin/page/index.html.eex
+++ b/web/templates/admin/page/index.html.eex
@@ -10,6 +10,9 @@
         <%= link "AdminUser", to: admin_admin_user_path(@conn, :index, @conn.assigns.locale) %>
       </li>
       <li>
+        <%= link "User", to: admin_user_path(@conn, :index, @conn.assigns.locale) %>
+      </li>
+      <li>
         <%= link "Category", to: admin_category_path(@conn, :index, @conn.assigns.locale) %>
       </li>
     </ul>
