--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -9,7 +9,7 @@
     <h4>Public</h4>
     <ul>
       <li>
-        <%= link "User login", to: session_path(@conn, :new, "identity") %>
+        <%= link "Entries", to: entry_path(@conn, :index, @conn.assigns.locale) %>
       </li>
     </ul>
   </div>
