--- a/web/templates/admin/user/form.html.eex
+++ b/web/templates/admin/user/form.html.eex
@@ -33,6 +33,12 @@
   </div>
 
   <div class="form-group">
+    <%= label f, :user_type, class: "control-label" %>
+    <%= select f, :user_type, UserType.select([:text, :id]), class: "form-control" %>
+    <%= error_tag f, :user_type %>
+  </div>
+
+  <div class="form-group">
     <%= label f, :status, class: "control-label" %>
     <%= select f, :status, Status.select([:text, :id]), class: "form-control" %>
     <%= error_tag f, :status %>
