--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,3 +1,7 @@
+<div class="jumbotron">
+  <h2><%= gettext "Top" %></h2>
+</div>
+
 <div class="row marketing">
   <div class="col-lg-6">
     <h4>Admin</h4>
