--- a/web/templates/entry/index.html.eex
+++ b/web/templates/entry/index.html.eex
@@ -16,7 +16,7 @@
       <td><%= entry.user.name %></td>
       <td><%= entry.category.name %></td>
       <td><%= assoc_captions(entry.tags, :name) %></td>
-      <td><%= entry.title %></td>
+      <td><%= translate(entry, :title) %></td>
       <td>
         <%= if entry.image do %>
           <img src="<%= EntryImageUploader.url({entry.image, entry}, :small) %>" alt="" />
