--- a/web/templates/admin/category/form.html.eex
+++ b/web/templates/admin/category/form.html.eex
@@ -7,13 +7,13 @@
 
   <div class="form-group">
     <%= label f, :name, class: "control-label" %>
-    <%= text_input f, :name, class: "form-control" %>
+    <%= text_input :category, :name, value: translate(@category, :name), class: "form-control" %>
     <%= error_tag f, :name %>
   </div>
 
   <div class="form-group">
     <%= label f, :description, class: "control-label" %>
-    <%= textarea f, :description, class: "form-control" %>
+    <%= textarea :category, :description, value: translate(@category, :description), class: "form-control" %>
     <%= error_tag f, :description %>
   </div>
 
