--- a/web/templates/admin/category/new.html.eex
+++ b/web/templates/admin/category/new.html.eex
@@ -1,6 +1,7 @@
 <h2>New category</h2>
 
 <%= render "form.html", changeset: @changeset,
+                        category: nil,
                         action: admin_category_path(@conn, :create, @conn.assigns.locale) %>
 
 <%= link "Back", to: admin_category_path(@conn, :index, @conn.assigns.locale) %>
