--- a/web/templates/admin/entry/index.html.eex
+++ b/web/templates/admin/entry/index.html.eex
@@ -16,7 +16,7 @@
 <%= for entry <- @entries do %>
     <tr>
       <td><%= entry.user.name %></td>
-      <td><%= entry.category.name %></td>
+      <td><%= translate(entry.category, :name) %></td>
       <td><%= assoc_captions(entry.tags, :name) %></td>
       <td><%= translate(entry, :title) %></td>
       <td><%= Status.get(entry.status).text %></td>
