--- a/web/templates/admin/entry/new.html.eex
+++ b/web/templates/admin/entry/new.html.eex
@@ -2,6 +2,7 @@
 
 <%= render "form.html", changeset: @changeset,
                         entry: nil,
+                        locale: @conn.assigns.locale,
                         action: admin_entry_path(@conn, :create, @conn.assigns.locale) %>
 
 <%= link "Back", to: admin_entry_path(@conn, :index, @conn.assigns.locale) %>
