--- a/web/templates/admin/user/show.html.eex
+++ b/web/templates/admin/user/show.html.eex
@@ -9,12 +9,12 @@
 
   <li>
     <strong>Name:</strong>
-    <%= @user.name %>
+    <%= translate(@user, :name) %>
   </li>
 
   <li>
     <strong>Profile:</strong>
-    <%= @user.profile %>
+    <%= translate(@user, :profile) %>
   </li>
 
   <li>
