--- a/web/templates/admin/entry/new.html.eex
+++ b/web/templates/admin/entry/new.html.eex
@@ -1,8 +1,8 @@
-<h2>New entry</h2>
+<h2><%= gettext "New entry" %></h2>
 
 <%= render "form.html", changeset: @changeset,
                         entry: nil,
                         locale: @conn.assigns.locale,
                         action: admin_entry_path(@conn, :create, @conn.assigns.locale) %>
 
-<%= link "Back", to: admin_entry_path(@conn, :index, @conn.assigns.locale) %>
+<%= link gettext("Back"), to: admin_entry_path(@conn, :index, @conn.assigns.locale) %>
