--- a/web/templates/admin/layout/app.html.eex
+++ b/web/templates/admin/layout/app.html.eex
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Admin - Phoenix</title>
+    <title><%= gettext "Admin" %> - Phoenix</title>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
@@ -26,7 +26,7 @@
       <%= render @view_module, @view_template, assigns %>
 
       <p>
-      <%= link "Admin top", to: admin_page_path(@conn, :index, current_locale(@conn)) %>
+      <%= link gettext("Admin top"), to: admin_page_path(@conn, :index, current_locale(@conn)) %>
     </div> <!-- /container -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
