--- a/web/templates/layout/login_bar.html.eex
+++ b/web/templates/layout/login_bar.html.eex
@@ -1,9 +1,9 @@
 <%= if user_logged_in?(@conn) do %>
   <li>
-    <%= link "Logout", to: session_path(@conn, :delete), method: :delete, class: "btn btn-danger" %>
+    <%= link gettext("Logout"), to: session_path(@conn, :delete), method: :delete, class: "btn btn-danger" %>
   </li>
 <% else %>
   <li>
-    <%= link "Login", to: session_path(@conn, :new, "identity"), class: "btn btn-danger" %>
+    <%= link gettext("Login"), to: session_path(@conn, :new, "identity"), class: "btn btn-danger" %>
   </li>
 <% end %>
