--- a/web/templates/admin/admin_user/edit.html.eex
+++ b/web/templates/admin/admin_user/edit.html.eex
@@ -1,6 +1,6 @@
-<h2>Edit admin user</h2>
+<h2><%= gettext "Edit admin user" %></h2>
 
 <%= render "form.html", changeset: @changeset,
                         action: admin_admin_user_path(@conn, :update, @conn.assigns.locale, @admin_user) %>
 
-<%= link "Back", to: admin_admin_user_path(@conn, :index, @conn.assigns.locale) %>
+<%= link gettext("Back"), to: admin_admin_user_path(@conn, :index, @conn.assigns.locale) %>
