--- a/web/templates/admin/admin_user/new.html.eex
+++ b/web/templates/admin/admin_user/new.html.eex
@@ -1,6 +1,6 @@
-<h2>New admin user</h2>
+<h2><%= gettext "New admin user" %></h2>
 
 <%= render "form.html", changeset: @changeset,
                         action: admin_admin_user_path(@conn, :create, @conn.assigns.locale) %>
 
-<%= link "Back", to: admin_admin_user_path(@conn, :index, @conn.assigns.locale) %>
+<%= link gettext("Back"), to: admin_admin_user_path(@conn, :index, @conn.assigns.locale) %>
