--- a/web/templates/admin/admin_user/show.html.eex
+++ b/web/templates/admin/admin_user/show.html.eex
@@ -3,21 +3,21 @@
 <ul>
 
   <li>
-    <strong>Email:</strong>
+    <strong><%= gettext "Email" %>:</strong>
     <%= @admin_user.email %>
   </li>
 
   <li>
-    <strong>Name:</strong>
+    <strong><%= gettext "Name" %>:</strong>
     <%= @admin_user.name %>
   </li>
 
   <li>
-    <strong>Status:</strong>
+    <strong><%= gettext "Status" %>:</strong>
     <%= Status.get(@admin_user.status).text %>
   </li>
 
 </ul>
 
-<%= link "Edit", to: admin_admin_user_path(@conn, :edit, @conn.assigns.locale, @admin_user) %>
-<%= link "Back", to: admin_admin_user_path(@conn, :index, @conn.assigns.locale) %>
+<%= link gettext("Edit"), to: admin_admin_user_path(@conn, :edit, @conn.assigns.locale, @admin_user) %>
+<%= link gettext("Back"), to: admin_admin_user_path(@conn, :index, @conn.assigns.locale) %>
