--- a/web/templates/admin/category/index.html.eex
+++ b/web/templates/admin/category/index.html.eex
@@ -1,11 +1,11 @@
-<h2>Listing categories</h2>
+<h2><%= gettext "Listing categories" %></h2>
 
 <table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Status</th>
+      <th><%= gettext "Name" %></th>
+      <th><%= gettext "Description" %></th>
+      <th><%= gettext "Status" %></th>
 
       <th></th>
     </tr>
@@ -18,13 +18,13 @@
       <td><%= Status.get(category.status).text %></td>
 
       <td class="text-right">
-        <%= link "Show", to: admin_category_path(@conn, :show, @conn.assigns.locale, category), class: "btn btn-default btn-xs" %>
-        <%= link "Edit", to: admin_category_path(@conn, :edit, @conn.assigns.locale, category), class: "btn btn-default btn-xs" %>
-        <%= link "Delete", to: admin_category_path(@conn, :delete, @conn.assigns.locale, category), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
+        <%= link gettext("Show"), to: admin_category_path(@conn, :show, @conn.assigns.locale, category), class: "btn btn-default btn-xs" %>
+        <%= link gettext("Edit"), to: admin_category_path(@conn, :edit, @conn.assigns.locale, category), class: "btn btn-default btn-xs" %>
+        <%= link gettext("Delete"), to: admin_category_path(@conn, :delete, @conn.assigns.locale, category), method: :delete, data: [confirm: gettext("Are you sure?")], class: "btn btn-danger btn-xs" %>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
-<%= link "New category", to: admin_category_path(@conn, :new, @conn.assigns.locale) %>
+<%= link gettext("New"), to: admin_category_path(@conn, :new, @conn.assigns.locale) %>
