--- a/web/templates/admin/category/show.html.eex
+++ b/web/templates/admin/category/show.html.eex
@@ -1,30 +1,30 @@
-<h2>Show category</h2>
+<h2><%= gettext "Show category" %></h2>
 
 <ul>
 
   <li>
-    <strong>Name:</strong>
+    <strong><%= gettext "Name" %>:</strong>
     <%= translate(@category, :name) %>
   </li>
 
   <li>
-    <strong>Description:</strong>
+    <strong><%= gettext "Description" %>:</strong>
     <%= translate(@category, :description) %>
   </li>
 
   <li>
-    <strong>Image:</strong>
+    <strong><%= gettext "Image" %>:</strong>
     <%= if @category.image do %>
       <img src="<%= CategoryImageUploader.url({@category.image, @category}, :medium) %>" alt="" />
     <% end %>
   </li>
 
   <li>
-    <strong>Status:</strong>
+    <strong><%= gettext "Status" %>:</strong>
     <%= Status.get(@category.status).text %>
   </li>
 
 </ul>
 
-<%= link "Edit", to: admin_category_path(@conn, :edit, @conn.assigns.locale, @category) %>
-<%= link "Back", to: admin_category_path(@conn, :index, @conn.assigns.locale) %>
+<%= link gettext("Edit"), to: admin_category_path(@conn, :edit, @conn.assigns.locale, @category) %>
+<%= link gettext("Back"), to: admin_category_path(@conn, :index, @conn.assigns.locale) %>
