--- a/web/templates/admin/layout/login_bar.html.eex
+++ b/web/templates/admin/layout/login_bar.html.eex
@@ -1,5 +1,5 @@
 <%= if admin_logged_in?(@conn) do %>
   <li>
-    <%= link "Logout", to: admin_session_path(@conn, :delete), method: :delete, class: "btn btn-danger" %>
+    <%= link gettext("Logout"), to: admin_session_path(@conn, :delete), method: :delete, class: "btn btn-danger" %>
   </li>
 <% end %>
