--- a/web/templates/admin/tag/index.html.eex
+++ b/web/templates/admin/tag/index.html.eex
@@ -1,10 +1,10 @@
-<h2>Listing tags</h2>
+<h2><%= gettext "Listing tags" %></h2>
 
 <table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Status</th>
+      <th><%= gettext "Name" %></th>
+      <th><%= gettext "Status" %></th>
 
       <th></th>
     </tr>
@@ -16,13 +16,13 @@
       <td><%= Status.get(tag.status).text %></td>
 
       <td class="text-right">
-        <%= link "Show", to: admin_tag_path(@conn, :show, @conn.assigns.locale, tag), class: "btn btn-default btn-xs" %>
-        <%= link "Edit", to: admin_tag_path(@conn, :edit, @conn.assigns.locale, tag), class: "btn btn-default btn-xs" %>
-        <%= link "Delete", to: admin_tag_path(@conn, :delete, @conn.assigns.locale, tag), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
+        <%= link gettext("Show"), to: admin_tag_path(@conn, :show, @conn.assigns.locale, tag), class: "btn btn-default btn-xs" %>
+        <%= link gettext("Edit"), to: admin_tag_path(@conn, :edit, @conn.assigns.locale, tag), class: "btn btn-default btn-xs" %>
+        <%= link gettext("Delete"), to: admin_tag_path(@conn, :delete, @conn.assigns.locale, tag), method: :delete, data: [confirm: gettext("Are you sure?")], class: "btn btn-danger btn-xs" %>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
-<%= link "New tag", to: admin_tag_path(@conn, :new, @conn.assigns.locale) %>
+<%= link gettext("New"), to: admin_tag_path(@conn, :new, @conn.assigns.locale) %>
