--- a/web/templates/admin/user/form.html.eex
+++ b/web/templates/admin/user/form.html.eex
@@ -1,30 +1,30 @@
 <%= form_for @changeset, @action, [multipart: true], fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
+      <p><%= gettext "Oops, something went wrong! Please check the errors below." %></p>
     </div>
   <% end %>
 
   <div class="form-group">
-    <%= label f, :email, class: "control-label" %>
+    <%= label f, :email, gettext("Email"), class: "control-label" %>
     <%= text_input f, :email, class: "form-control" %>
     <%= error_tag f, :email %>
   </div>
 
   <div class="form-group">
-    <%= label f, :name, class: "control-label" %>
+    <%= label f, :name, gettext("Name"), class: "control-label" %>
     <%= text_input :user, :name, value: translate(@user, :name), class: "form-control" %>
     <%= error_tag f, :name %>
   </div>
 
   <div class="form-group">
-    <%= label f, :profile, class: "control-label" %>
+    <%= label f, :profile, gettext("Profile"), class: "control-label" %>
     <%= textarea :user, :profile, value: translate(@user, :profile), class: "form-control" %>
     <%= error_tag f, :profile %>
   </div>
 
   <div class="form-group">
-    <%= label f, :image, class: "control-label" %>
+    <%= label f, :image, gettext("Image"), class: "control-label" %>
     <%= if @changeset.data.image do %>
       <img src="<%= UserImageUploader.url({@changeset.data.image, @changeset.data}, :medium) %>" alt="" />
     <% end %>
@@ -33,30 +33,30 @@
   </div>
 
   <div class="form-group">
-    <%= label f, :user_type, class: "control-label" %>
+    <%= label f, :user_type, gettext("UserType"), class: "control-label" %>
     <%= select f, :user_type, UserType.select([:text, :id]), class: "form-control" %>
     <%= error_tag f, :user_type %>
   </div>
 
   <div class="form-group">
-    <%= label f, :status, class: "control-label" %>
+    <%= label f, :status, gettext("Status"), class: "control-label" %>
     <%= select f, :status, Status.select([:text, :id]), class: "form-control" %>
     <%= error_tag f, :status %>
   </div>
 
   <div class="form-group">
-    <%= label f, :password, class: "control-label" %>
+    <%= label f, :password, gettext("Password"), class: "control-label" %>
     <%= password_input f, :password, class: "form-control" %>
     <%= error_tag f, :password %>
   </div>
 
   <div class="form-group">
-    <%= label f, :password_confirmation, class: "control-label" %>
+    <%= label f, :password_confirmation, gettext("Password Confirmation"), class: "control-label" %>
     <%= password_input f, :password_confirmation, class: "form-control" %>
     <%= error_tag f, :password_confirmation %>
   </div>
 
   <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
+    <%= submit gettext("Submit"), class: "btn btn-primary" %>
   </div>
 <% end %>
