--- a/web/templates/session/new.html.eex
+++ b/web/templates/session/new.html.eex
@@ -1,17 +1,17 @@
-<h1>User Login</h1>
+<h1><%= gettext "User Login" %></h1>
 <%= form_tag session_path(@conn, :callback, "identity"), method: "post", class: "login" do %>
   <div class='control-group'>
-    <label class='control-label' for='email-input'>Email</label>
+    <label class='control-label' for='email-input'><%= gettext "Email" %></label>
     <input class='form-control' type='email' name='email' value='<%= @conn.params["email"] %>' required/>
   </div>
 
   <div class='control-group'>
-    <label class='control-label' for='password-input'>Password</label>
+    <label class='control-label' for='password-input'><%= gettext "Password" %></label>
     <input class='form-control' type='password' name='password' required/>
   </div>
 
   <div class='control-group'>
-    <button class='btn btn-primary'>Login</button>
+    <button class='btn btn-primary'><%= gettext "Login" %></button>
   </div>
 <% end %>
 <p>
