--- a/web/templates/admin/admin_user/index.html.eex
+++ b/web/templates/admin/admin_user/index.html.eex
@@ -27,4 +27,6 @@
   </tbody>
 </table>
 
+<%= pagination_links @conn, @page, [@conn.assigns.locale], path: &admin_admin_user_path/4 %>
+
 <%= link gettext("New"), to: admin_admin_user_path(@conn, :new, @conn.assigns.locale) %>
