--- a/web/templates/admin/tag/index.html.eex
+++ b/web/templates/admin/tag/index.html.eex
@@ -25,4 +25,6 @@
   </tbody>
 </table>
 
+<%= pagination_links @conn, @page, [@conn.assigns.locale], path: &admin_tag_path/4 %>
+
 <%= link gettext("New"), to: admin_tag_path(@conn, :new, @conn.assigns.locale) %>
