--- a/web/templates/admin/user/index.html.eex
+++ b/web/templates/admin/user/index.html.eex
@@ -31,4 +31,6 @@
   </tbody>
 </table>
 
+<%= pagination_links @conn, @page, [@conn.assigns.locale], path: &admin_user_path/4 %>
+
 <%= link gettext("New"), to: admin_user_path(@conn, :new, @conn.assigns.locale) %>
